tests/assembler/fail/test14.ial
type BadFuncPtr
{
    field instance stdcall void() foo;
}
